src/test/resources/typeSystemTestModels/valid/classes/ClassNoModifierDuplicate.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.classes;

public final class ClassNoModifierDuplicate {

}
